--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -13,6 +13,8 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="Contilog.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <!-- Quill.js Rich Text Editor -->
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -30,5 +32,8 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <!-- Quill.js Rich Text Editor -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+    <script src="js/quillInterop.js"></script>
 </body>
 </html>
