--- a/Components/PostCard.razor
+++ b/Components/PostCard.razor
@@ -74,7 +74,7 @@
                 </div>
                 <div class="post-meta-top text-end text-muted">
                     <div class="post-edit-button mb-2">
-                        <button class="btn btn-sm btn-outline-primary" @onclick="OnEdit" title="Edit Post">
+                        <button class="btn btn-outline-primary" @onclick="OnEdit" title="Edit Post">
                             <span class="oi oi-pencil" aria-hidden="true"></span>
                         </button>
                     </div>
